--- a/index.html
+++ b/index.html
@@ -352,7 +352,22 @@
             </div>
           </div>
 
-          <p class="text-gray-500 text-xs mt-2 text-center">Powered by Llama 3.1 via Cloudflare Workers AI</p>
+          <!-- Model Selector -->
+          <div class="mt-3 pt-3 border-t border-gray-700">
+            <div class="flex items-center justify-between mb-2">
+              <span class="text-xs text-gray-400">AI Model</span>
+              <span id="modelBadge" class="text-xs text-green-400">Free</span>
+            </div>
+            <div id="modelGrid" class="grid grid-cols-3 gap-1.5">
+              <!-- Models will be inserted here by JS -->
+            </div>
+            <p id="paidModelNote" class="text-gray-500 text-xs mt-2 text-center hidden">
+              <svg class="w-3 h-3 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/>
+              </svg>
+              Add your API key above to use paid models
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -569,6 +584,19 @@
     let isLoading = false;
     let chatStarted = false;
     let userApiKey = localStorage.getItem('tomcp_api_key') || '';
+    let selectedModel = localStorage.getItem('tomcp_model') || 'llama';
+
+    // Available AI models
+    const AI_MODELS = [
+      // Free models (Cloudflare Workers AI)
+      { id: 'llama', name: 'Llama 3.1', provider: 'Meta', free: true, icon: '🦙' },
+      { id: 'qwen', name: 'Qwen 1.5', provider: 'Alibaba', free: true, icon: '🌟' },
+      { id: 'mistral', name: 'Mistral 7B', provider: 'Mistral', free: true, icon: '🌀' },
+      // Paid models (require API key)
+      { id: 'claude-sonnet', name: 'Claude 3.5', provider: 'Anthropic', free: false, icon: '🟠' },
+      { id: 'gpt-4o', name: 'GPT-4o', provider: 'OpenAI', free: false, icon: '🟢' },
+      { id: 'gemini-pro', name: 'Gemini 1.5', provider: 'Google', free: false, icon: '🔵' },
+    ];
 
     const chatMessages = document.getElementById('chatMessages');
     const chatInput = document.getElementById('chatInput');
@@ -634,6 +662,66 @@
 
     // Initialize API key UI
     updateApiKeyUI();
+
+    // Render model selector
+    function renderModels() {
+      const grid = document.getElementById('modelGrid');
+      const modelBadge = document.getElementById('modelBadge');
+      const paidNote = document.getElementById('paidModelNote');
+
+      grid.innerHTML = AI_MODELS.map(model => {
+        const isSelected = selectedModel === model.id;
+        const isDisabled = !model.free; // Paid models are disabled for now
+
+        return `
+          <button
+            data-model-id="${model.id}"
+            ${isDisabled ? 'disabled' : ''}
+            class="model-btn group relative flex flex-col items-center gap-0.5 p-2 rounded-lg border transition-all duration-200 ${
+              isSelected
+                ? 'border-blue-500/50 bg-blue-500/20'
+                : isDisabled
+                  ? 'border-gray-800 bg-gray-900/30 opacity-50 cursor-not-allowed'
+                  : 'border-gray-800 bg-gray-900/30 hover:border-gray-600 hover:bg-gray-800/50 cursor-pointer'
+            }"
+            title="${model.name} by ${model.provider}${isDisabled ? ' (Coming soon)' : ''}"
+          >
+            <span class="text-base">${model.icon}</span>
+            <span class="text-[10px] font-medium truncate w-full text-center ${
+              isSelected ? 'text-blue-300' : isDisabled ? 'text-gray-600' : 'text-gray-400'
+            }">
+              ${model.name.split(' ')[0]}
+            </span>
+            ${isDisabled ? '<span class="absolute -top-1 -right-1 text-[8px] bg-gray-700 text-gray-400 px-1 rounded">PRO</span>' : ''}
+          </button>
+        `;
+      }).join('');
+
+      // Update badge
+      const currentModel = AI_MODELS.find(m => m.id === selectedModel);
+      if (currentModel) {
+        modelBadge.textContent = currentModel.free ? 'Free' : 'Pro';
+        modelBadge.className = currentModel.free
+          ? 'text-xs text-green-400'
+          : 'text-xs text-yellow-400';
+      }
+
+      // Show/hide paid note
+      paidNote.classList.toggle('hidden', AI_MODELS.find(m => m.id === selectedModel)?.free !== false);
+
+      // Add click handlers
+      document.querySelectorAll('.model-btn:not([disabled])').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const modelId = btn.dataset.modelId;
+          selectedModel = modelId;
+          localStorage.setItem('tomcp_model', modelId);
+          renderModels();
+        });
+      });
+    }
+
+    // Initialize model selector
+    renderModels();
 
     // Add message to chat
     function addMessage(role, content) {
@@ -710,7 +798,8 @@
         const requestBody = {
           url: chatWebsiteUrl,
           message: message,
-          history: chatHistory.slice(-6) // Keep last 6 for context
+          history: chatHistory.slice(-6), // Keep last 6 for context
+          model: selectedModel
         };
 
         // Include API key if available (bypasses rate limits)
