--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
     <header class="text-center mb-6">
       <!-- Big Logo + Title (no gap) -->
       <div class="flex flex-col items-center">
-        <img src="/logo.png" alt="toMCP Logo" class="w-[280px] h-[280px] -mt-12 -mb-20">
-        <h1 class="text-3xl font-semibold text-white tracking-tight">toMCP</h1>
+        <img src="/logo.png" alt="toMCP Logo" class="w-[280px] h-[280px] -mt-12 -mb-28">
+        <h1 class="text-4xl font-semibold text-white tracking-tight mt-2 mb-3">toMCP</h1>
       </div>
 
       <!-- Clear explanation -->
-      <p class="text-xl text-gray-300 mb-6 max-w-2xl mx-auto whitespace-nowrap">Convert any website or documentation into an MCP server for your AI tools</p>
+      <p class="text-3xl text-gray-300 mb-6 mx-auto whitespace-nowrap">Convert any website or documentation into an MCP server for your AI tools</p>
 
       <!-- Examples -->
       <div class="mb-4">
-        <p class="text-gray-500 text-base mb-3">Convert any website into MCP server by adding tomcp.org/ before the URL:</p>
-        <div class="flex flex-col items-center gap-2 text-lg font-mono">
+        <p class="text-gray-400 text-xl mb-3">add tomcp.org/ before any url</p>
+        <div class="flex flex-col items-center gap-2 text-2xl font-mono">
           <span><span class="text-white">tomcp.org/</span><span class="text-blue-400">docs.stripe.com</span></span>
           <span><span class="text-white">tomcp.org/</span><span class="text-blue-400">react.dev</span></span>
           <span><span class="text-white">tomcp.org/</span><span class="text-blue-400">your-docs.com/api</span></span>
@@ -299,49 +299,43 @@
             <button
               id="chatSendBtn"
               disabled
-              class="px-4 py-2.5 rounded-lg bg-blue-600 hover:bg-blue-500 text-white font-medium transition-colors flex items-center gap-2 disabled:opacity-50 disabled:cursor-not-allowed"
+              class="px-4 py-2.5 bg-blue-600 hover:bg-blue-500 text-white font-medium transition-colors rounded-lg flex items-center disabled:opacity-50 disabled:cursor-not-allowed"
             >
               <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"/>
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M12 5l7 7-7 7"/>
               </svg>
             </button>
           </div>
 
-          <!-- API Key Section (BYOK) - Hidden until chat starts -->
-          <div id="apiKeySection" class="mt-4 hidden">
-            <div class="bg-gradient-to-r from-green-900/30 to-emerald-900/30 border border-green-500/30 rounded-lg p-3">
-              <div class="flex items-center gap-2 mb-2">
-                <svg class="w-4 h-4 text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 7a2 2 0 012 2m4 0a6 6 0 01-7.743 5.743L11 17H9v2H7v2H4a1 1 0 01-1-1v-2.586a1 1 0 01.293-.707l5.964-5.964A6 6 0 1121 9z"/>
-                </svg>
-                <span class="text-green-300 font-medium text-sm">Bypass Rate Limits</span>
-                <span id="apiKeyBadge" class="hidden ml-auto text-xs bg-green-600/50 text-green-200 px-2 py-0.5 rounded-full">Unlimited</span>
-              </div>
-              <p class="text-gray-400 text-xs mb-3">
-                Free tier: 5 messages/day. Add your own Cloudflare Workers AI API token for unlimited usage.
-                <a href="https://developers.cloudflare.com/workers-ai/get-started/rest-api/#1-get-api-token-and-account-id" target="_blank" class="text-blue-400 hover:text-blue-300 underline">Get your free token</a>
+          <!-- Model Selector -->
+          <div class="mt-2">
+            <select id="modelSelect" class="w-full px-3 py-2 bg-gray-900/50 border border-gray-700 rounded-lg text-gray-300 text-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 focus:outline-none cursor-pointer">
+              <!-- Options will be inserted here by JS -->
+            </select>
+          </div>
+
+          <!-- API Key Section -->
+          <div id="apiKeySection" class="mt-3 hidden">
+            <div class="bg-gray-800/50 border border-gray-700 rounded-lg p-3">
+              <p class="text-gray-400 text-xs mb-2">
+                Add API key from <a href="https://developers.cloudflare.com/workers-ai/get-started/rest-api/#1-get-api-token-and-account-id" target="_blank" class="text-blue-400 hover:text-blue-300 underline">Cloudflare Workers AI</a> to use all models
               </p>
               <div id="apiKeyInputArea" class="flex gap-2">
                 <input
                   type="password"
                   id="apiKeyInput"
-                  placeholder="Paste your Cloudflare AI token..."
-                  class="flex-1 px-3 py-2 bg-gray-900/50 border border-gray-700 rounded-lg text-white text-sm placeholder:text-gray-500 focus:ring-2 focus:ring-green-500 focus:border-green-500 focus:outline-none transition-all"
+                  placeholder="Your API key..."
+                  class="flex-1 px-3 py-2 bg-gray-900/50 border border-gray-700 rounded-lg text-white text-sm placeholder:text-gray-500 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 focus:outline-none transition-all"
                 >
                 <button
                   id="saveApiKeyBtn"
-                  class="px-4 py-2 rounded-lg bg-green-600 hover:bg-green-500 text-white text-sm font-medium transition-colors"
+                  class="px-4 py-2 rounded-lg bg-blue-600 hover:bg-blue-500 text-white text-sm font-medium transition-colors"
                 >
                   Save
                 </button>
               </div>
               <div id="apiKeySavedArea" class="hidden flex items-center justify-between">
-                <span class="text-green-400 text-sm flex items-center gap-1">
-                  <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"/>
-                  </svg>
-                  API key saved - Unlimited messages!
-                </span>
+                <span class="text-green-400 text-sm">API key saved</span>
                 <button
                   id="clearApiKeyBtn"
                   class="px-3 py-1.5 rounded-lg bg-gray-700 hover:bg-gray-600 text-white text-xs font-medium transition-colors"
@@ -350,23 +344,6 @@
                 </button>
               </div>
             </div>
-          </div>
-
-          <!-- Model Selector -->
-          <div class="mt-3 pt-3 border-t border-gray-700">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-xs text-gray-400">AI Model</span>
-              <span id="modelBadge" class="text-xs text-green-400">Free</span>
-            </div>
-            <div id="modelGrid" class="grid grid-cols-3 gap-1.5">
-              <!-- Models will be inserted here by JS -->
-            </div>
-            <p id="paidModelNote" class="text-gray-500 text-xs mt-2 text-center hidden">
-              <svg class="w-3 h-3 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/>
-              </svg>
-              Add your API key above to use paid models
-            </p>
           </div>
         </div>
       </div>
@@ -394,6 +371,9 @@
 
       <!-- Fullscreen Input -->
       <div class="flex gap-2">
+        <select id="fullscreenModelSelect" class="px-3 py-3 bg-gray-900/50 border border-gray-700 rounded-lg text-white text-sm focus:ring-2 focus:ring-blue-500 focus:border-blue-500 focus:outline-none">
+          <!-- Options synced by JS -->
+        </select>
         <input
           type="text"
           id="fullscreenInput"
@@ -578,25 +558,31 @@
     // ========== CHAT FUNCTIONALITY ==========
     // Use localhost for local dev, production URL otherwise
     const isLocalDev = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1';
-    const CHAT_API_URL = isLocalDev ? 'http://localhost:8787/chat' : 'https://tomcp.org/chat';
+    const API_BASE = isLocalDev ? 'http://localhost:8787' : 'https://tomcp.org';
+    const CHAT_API_URL = `${API_BASE}/chat`;
+    const MODELS_API_URL = `${API_BASE}/models`;
     let chatHistory = [];
     let chatWebsiteUrl = '';
     let isLoading = false;
     let chatStarted = false;
     let userApiKey = localStorage.getItem('tomcp_api_key') || '';
-    let selectedModel = localStorage.getItem('tomcp_model') || 'llama';
+    let selectedModel = localStorage.getItem('tomcp_model') || '@cf/meta/llama-3.1-8b-instruct';
 
-    // Available AI models
-    const AI_MODELS = [
-      // Free models (Cloudflare Workers AI)
-      { id: 'llama', name: 'Llama 3.1', provider: 'Meta', free: true, icon: '🦙' },
-      { id: 'qwen', name: 'Qwen 1.5', provider: 'Alibaba', free: true, icon: '🌟' },
-      { id: 'mistral', name: 'Mistral 7B', provider: 'Mistral', free: true, icon: '🌀' },
-      // Paid models (require API key)
-      { id: 'claude-sonnet', name: 'Claude 3.5', provider: 'Anthropic', free: false, icon: '🟠' },
-      { id: 'gpt-4o', name: 'GPT-4o', provider: 'OpenAI', free: false, icon: '🟢' },
-      { id: 'gemini-pro', name: 'Gemini 1.5', provider: 'Google', free: false, icon: '🔵' },
-    ];
+    // Available AI models (fetched from API)
+    let AI_MODELS = [];
+
+    // Fetch models from API
+    async function fetchModels() {
+      try {
+        const response = await fetch(MODELS_API_URL);
+        if (response.ok) {
+          AI_MODELS = await response.json();
+          renderModels();
+        }
+      } catch (error) {
+        console.error('Failed to fetch models:', error);
+      }
+    }
 
     const chatMessages = document.getElementById('chatMessages');
     const chatInput = document.getElementById('chatInput');
@@ -610,7 +596,6 @@
     const apiKeySection = document.getElementById('apiKeySection');
     const apiKeyInputArea = document.getElementById('apiKeyInputArea');
     const apiKeySavedArea = document.getElementById('apiKeySavedArea');
-    const apiKeyBadge = document.getElementById('apiKeyBadge');
 
     // Fullscreen elements
     const fullscreenBtn = document.getElementById('fullscreenBtn');
@@ -628,12 +613,10 @@
         apiKeyInputArea.classList.add('hidden');
         apiKeySavedArea.classList.remove('hidden');
         apiKeySavedArea.classList.add('flex');
-        apiKeyBadge.classList.remove('hidden');
       } else {
         apiKeyInputArea.classList.remove('hidden');
         apiKeySavedArea.classList.add('hidden');
         apiKeySavedArea.classList.remove('flex');
-        apiKeyBadge.classList.add('hidden');
         apiKeyInput.value = '';
       }
     }
@@ -663,65 +646,42 @@
     // Initialize API key UI
     updateApiKeyUI();
 
-    // Render model selector
+    // Render model selector dropdown (both main and fullscreen)
     function renderModels() {
-      const grid = document.getElementById('modelGrid');
-      const modelBadge = document.getElementById('modelBadge');
-      const paidNote = document.getElementById('paidModelNote');
+      const selects = [
+        document.getElementById('modelSelect'),
+        document.getElementById('fullscreenModelSelect')
+      ].filter(Boolean);
 
-      grid.innerHTML = AI_MODELS.map(model => {
-        const isSelected = selectedModel === model.id;
-        const isDisabled = !model.free; // Paid models are disabled for now
-
-        return `
-          <button
-            data-model-id="${model.id}"
-            ${isDisabled ? 'disabled' : ''}
-            class="model-btn group relative flex flex-col items-center gap-0.5 p-2 rounded-lg border transition-all duration-200 ${
-              isSelected
-                ? 'border-blue-500/50 bg-blue-500/20'
-                : isDisabled
-                  ? 'border-gray-800 bg-gray-900/30 opacity-50 cursor-not-allowed'
-                  : 'border-gray-800 bg-gray-900/30 hover:border-gray-600 hover:bg-gray-800/50 cursor-pointer'
-            }"
-            title="${model.name} by ${model.provider}${isDisabled ? ' (Coming soon)' : ''}"
-          >
-            <span class="text-base">${model.icon}</span>
-            <span class="text-[10px] font-medium truncate w-full text-center ${
-              isSelected ? 'text-blue-300' : isDisabled ? 'text-gray-600' : 'text-gray-400'
-            }">
-              ${model.name.split(' ')[0]}
-            </span>
-            ${isDisabled ? '<span class="absolute -top-1 -right-1 text-[8px] bg-gray-700 text-gray-400 px-1 rounded">PRO</span>' : ''}
-          </button>
-        `;
+      // Show all models, disable paid ones
+      const optionsHtml = AI_MODELS.map(model => {
+        const isPaid = !model.free;
+        const label = isPaid
+          ? `${model.name} (add api key to use this model)`
+          : `${model.name} (${model.provider})`;
+        return `<option value="${model.id}" ${selectedModel === model.id ? 'selected' : ''} ${isPaid ? 'disabled' : ''}>${label}</option>`;
       }).join('');
 
-      // Update badge
-      const currentModel = AI_MODELS.find(m => m.id === selectedModel);
-      if (currentModel) {
-        modelBadge.textContent = currentModel.free ? 'Free' : 'Pro';
-        modelBadge.className = currentModel.free
-          ? 'text-xs text-green-400'
-          : 'text-xs text-yellow-400';
-      }
-
-      // Show/hide paid note
-      paidNote.classList.toggle('hidden', AI_MODELS.find(m => m.id === selectedModel)?.free !== false);
-
-      // Add click handlers
-      document.querySelectorAll('.model-btn:not([disabled])').forEach(btn => {
-        btn.addEventListener('click', () => {
-          const modelId = btn.dataset.modelId;
-          selectedModel = modelId;
-          localStorage.setItem('tomcp_model', modelId);
-          renderModels();
-        });
+      selects.forEach(select => {
+        select.innerHTML = optionsHtml;
+        // Set first FREE model as default if current selection is invalid
+        const freeModels = AI_MODELS.filter(m => m.free);
+        if (!freeModels.some(m => m.id === selectedModel) && freeModels.length > 0) {
+          selectedModel = freeModels[0].id;
+          localStorage.setItem('tomcp_model', selectedModel);
+        }
+        select.value = selectedModel;
+        select.onchange = (e) => {
+          selectedModel = e.target.value;
+          localStorage.setItem('tomcp_model', selectedModel);
+          // Sync all dropdowns
+          selects.forEach(s => s.value = selectedModel);
+        };
       });
     }
 
-    // Initialize model selector
-    renderModels();
+    // Initialize model selector (fetch from API)
+    fetchModels();
 
     // Add message to chat
     function addMessage(role, content) {
