--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://tomcp.org/">
   <meta property="og:title" content="toMCP - Turn Any Website into an MCP Server">
   <meta property="og:description" content="Convert any website URL into an MCP server config for AI tools. Chat with any website using AI.">
-  <meta property="og:image" content="https://tomcp.org/logo.svg">
+  <meta property="og:image" content="https://tomcp.org/logoblack.png">
   <meta property="og:image:width" content="512">
   <meta property="og:image:height" content="512">
 
@@ -25,7 +25,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="toMCP - Turn Any Website into an MCP Server">
   <meta name="twitter:description" content="Convert any website URL into an MCP server config for AI tools. Chat with any website using AI.">
-  <meta name="twitter:image" content="https://tomcp.org/logo.svg">
+  <meta name="twitter:image" content="https://tomcp.org/logoblack.png">
 
   <!-- SEO -->
   <link rel="canonical" href="https://tomcp.org/">
